--- a/singly-linked-list/CMakeLists.txt
+++ b/singly-linked-list/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.17)
-project(ADTs_c C)
+project(singly_linked_list C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(ADTs_c main.c)
+add_executable(singly_linked_list main.c)
