--- a/TMPS/LL3/BehavioralPatterns/StatePattern/StatePattern.csproj
+++ b/TMPS/LL3/BehavioralPatterns/StatePattern/StatePattern.csproj
@@ -7,4 +7,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Context\" />
+    <None Remove="State\" />
+    <None Remove="StateA\" />
+    <None Remove="StateB\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Context\" />
+    <Folder Include="State\" />
+    <Folder Include="StateA\" />
+    <Folder Include="StateB\" />
+  </ItemGroup>
 </Project>
