Implement state pattern

--- a/TMPS/LL3/BehavioralPatterns/StatePattern/StatePattern.csproj
+++ b/TMPS/LL3/BehavioralPatterns/StatePattern/StatePattern.csproj
@@ -10,13 +10,11 @@
   <ItemGroup>
     <None Remove="Context\" />
     <None Remove="State\" />
-    <None Remove="StateA\" />
-    <None Remove="StateB\" />
+    <None Remove="ConcreteStates\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Context\" />
     <Folder Include="State\" />
-    <Folder Include="StateA\" />
-    <Folder Include="StateB\" />
+    <Folder Include="ConcreteStates\" />
   </ItemGroup>
 </Project>
