--- a/PAD/LL1/MultiConBroker/MultiConBroker.csproj
+++ b/PAD/LL1/MultiConBroker/MultiConBroker.csproj
@@ -20,4 +20,7 @@
     <Folder Include="Models\" />
     <Folder Include="Repos\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common.Data\Common.Data.csproj" />
+  </ItemGroup>
 </Project>
