--- a/News/News.Web/Properties/launchSettings.json
+++ b/News/News.Web/Properties/launchSettings.json
@@ -1,21 +1,21 @@
-{
+﻿{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:40305",
-      "sslPort": 44331
+      "applicationUrl": "http://localhost:44015",
+      "sslPort": 44360
     }
   },
   "profiles": {
     "News.Web": {
       "commandName": "Project",
+      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7197;http://localhost:5112",
+      "applicationUrl": "https://localhost:7123;http://localhost:5015",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "dotnetRunMessages": true
+      }
     },
     "IIS Express": {
       "commandName": "IISExpress",
